# MotorConfigurator

./: README.md
Motor Configurator/: CMakeLists.txt
Motor Configurator/apps/cli/: main.cpp
Motor Configurator/apps/qt/: qt_main.cpp
Motor Configurator/docs/: CLEANUP_PASS_PLAN.md  COMMAND_COVERAGE.md  ETHERCAT_MOTOR_TYPE_EEPROM_PLAN.md
Motor Configurator/drivers/interfaces/: init_all_drivers.cpp  init_all_drivers.h
Motor Configurator/drivers/interfaces/ethercat/adapter/: ethercat_axis_adapter.cpp  ethercat_axis_adapter.h
Motor Configurator/drivers/interfaces/ethercat/manager/: ethercat_bus_manager.h
Motor Configurator/drivers/interfaces/mks/adapter/: mks_axis_adapter.cpp  mks_axis_adapter.h  mks_runtime_config.cpp  mks_runtime_config.h  mks_runtime_factory.cpp  mks_runtime_factory.h
Motor Configurator/drivers/interfaces/mks/dictionary/: mks_dictionary.cpp  mks_dictionary.h
Motor Configurator/drivers/interfaces/mks/internal/port/: gs_usb_can_port.cpp  gs_usb_can_port.h  sim_can_port.cpp  sim_can_port.h
Motor Configurator/drivers/interfaces/mks/internal/protocol/: mks_protocol.cpp  mks_protocol.h
Motor Configurator/drivers/interfaces/mks/manager/: mks_can_bus_manager.cpp  mks_can_bus_manager.h  mks_topology_scanner.cpp
Motor Configurator/drivers/interfaces/mks_can/adapter/: mks_axis_adapter.cpp  mks_axis_adapter.h  mks_runtime_config.h  mks_runtime_factory.cpp  mks_runtime_factory.h
Motor Configurator/drivers/interfaces/mks_can/axis/: mks_axis_configurator.cpp  mks_axis_worker.cpp  mks_axis_worker.h
Motor Configurator/drivers/interfaces/mks_can/dictionary/: mks_dictionary.cpp
Motor Configurator/drivers/interfaces/mks_can/internal/port/: gs_usb_can_port.h  sim_can_port.cpp
Motor Configurator/drivers/interfaces/mks_can/internal/protocol/: mks_protocol.cpp  mks_protocol.h
Motor Configurator/drivers/interfaces/mks_can/manager/: mks_can_bus_manager.cpp  mks_can_bus_manager.h  mks_topology_scanner.cpp  mks_topology_scanner.h
Motor Configurator/drivers/interfaces/mks_can/motion/: mks_absolute_position_motion.cpp  mks_motion_mode.h  mks_velocity_motion.cpp
Motor Configurator/motion_core/include/motion_core/: axis_data.h  axis_interface.h  bus_manager_interface.h  hal_runtime.h  result.h  runtime_factory_registry.h  runtime_loop.h  spsc_queue.h
Motor Configurator/motion_core/include/motion_core/config/: axis_config_json.h  hal_runtime_config.h
Motor Configurator/motion_core/src/: hal_runtime.cpp  runtime_loop.cpp
Motor Configurator/motion_core/src/config/: axis_config_json.cpp
Motor Configurator/ui/qt/mks/: ScopeWidget.cpp  axis_manager.cpp  axis_manager.h  axis_workspace.cpp  axis_workspace.h  main_window.cpp  sequencer_widget.cpp
Motor Configurator/ui/qt/mks/axis_manager/: axis_manager.h
Motor Configurator/ui/qt/mks/axis_workspace/: axis_workspace.cpp  axis_workspace.h
Motor Configurator/ui/qt/mks/main_window/: main_window.cpp  main_window.h
Motor Configurator/ui/qt/mks/scope/: ScopeWidget.h
MotorTester_app____/: ARCHITECTURE.md  CMakeLists.txt  manual.txt
MotorTester_app____/apps/cli/: main.cpp
MotorTester_app____/config/: mixed_runtime_sample.json  mks_runtime_bad_axis_cfg_temp.json
MotorTester_app____/docs/: DVS_ETHCAT_V1.12_XJ_3.xml  mks_protocol_description.md
MotorTester_app____/drivers/interfaces/: init_all_drivers.cpp
MotorTester_app____/drivers/interfaces/ethercat/: p100e_ethercat_dictionary.h
MotorTester_app____/drivers/interfaces/ethercat/adapter/: ethercat_axis_adapter.cpp  ethercat_axis_adapter.h
MotorTester_app____/drivers/interfaces/ethercat/manager/: ethercat_runtime_factory.cpp
MotorTester_app____/drivers/interfaces/mks_can/axis/: axis_cycle_metrics.h  mks_axis_worker.cpp  mks_axis_worker.h
MotorTester_app____/drivers/interfaces/mks_can/motion/: mks_motion_mode.h  mks_motion_mode_base.cpp
MotorTester_app____/hal_host_service/include/hal_host_service/: axis_ownership_arbiter.h  hal_host_service.h
MotorTester_app____/hal_host_service/src/: axis_ownership_arbiter.cpp  hal_host_service.cpp
MotorTester_app____/hal_ipc/include/hal_ipc/: client.h  protocol.h  server.h
MotorTester_app____/hal_ipc/src/: client.cpp  protocol.cpp  server.cpp
MotorTester_app____/motion_core/include/motion_core/: hal_runtime.h  parameter_id.h  result.h  types.h
MotorTester_app____/motion_core/src/: runtime_factory_registry.cpp
MotorTester_app____/ui/qt/mks/: axis_manager.cpp  axis_manager.h
MotorTester_app____/ui/qt/mks/axis_workspace/: axis_workspace.cpp  axis_workspace.h  axis_workspace_control_panel.cpp  (+5 more)
MotorTester_app_last/: ARCHITECTURE.md  refactoring_plan.md  таск2
MotorTester_app_last/apps/hal_host/: main.cpp
MotorTester_app_last/config/: mks_runtime_temp.json
MotorTester_app_last/docs/: HEXAMOTION_HAL_INTEGRATION_SPEC.md
MotorTester_app_last/hal_host_service/include/hal_host_service/: runtime_queue_ingress.h
MotorTester_app_last/hal_host_service/src/: hal_host_service.cpp
MotorTester_app_last/hal_ipc/include/hal_ipc/: client.h  protocol.h  server.h
MotorTester_app_last/hal_ipc/src/: server.cpp
MotorTester_app_last/motion_core/: CMakeLists.txt
MotorTester_app_last/motion_core/include/motion_core/: axis_data.h  types.h
MotorTester_app_last/motion_core/include/motion_core/config/: axis_config.h
MotorTester_app_last/motion_core/src/config/: hal_runtime_config_json.cpp
MotorTester_app_last/ui/qt/mks/: DarkStyle.h  axis_manager.cpp  axis_workspace.h  main_window.cpp  sequencer_widget.cpp
motor_tester_legacy_examnple/: CMakeLists.txt
motor_tester_legacy_examnple/drivers/interfaces/ethercat/: p100e_ethercat_dictionary.h
motor_tester_legacy_examnple/hal_host_service/include/hal_host_service/: hal_host_service.h
motor_tester_legacy_examnple/hal_ipc/src/: client.cpp  protocol.cpp
motor_tester_legacy_examnple/motion_core/include/motion_core/: parameter_id.h  parameter_types.h  runtime_loop.h
motor_tester_legacy_examnple/motion_core/src/: hal_runtime.cpp
motor_tester_legacy_examnple/ui/qt/mks/: ScopeWidget.h  axis_manager.h  axis_workspace_types.h  main_window.h  sequencer_widget.h
(+28 files in other folders)
